--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -7,10 +7,21 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         </ul>
-        <form class="d-flex">
-          <input class="form-control me-2" type="search" placeholder="Search movie" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
-        </form>
+        <div class="d-flex">
+          <input 
+            #search
+            type="search" 
+            aria-label="Search"
+            class="form-control me-2" 
+            placeholder="Search movie" 
+            (keyUp.enter)="movieSearch(search.value)"
+          >
+          <button 
+            type="submit"
+            class="btn btn-outline-success" 
+            (click)="movieSearch(search.value)"
+          >Search</button>
+        </div>
       </div>
     </div>
   </nav>
