--- a/src/app/pages/search/search.component.html
+++ b/src/app/pages/search/search.component.html
@@ -1,1 +1,2 @@
-<p>search works!</p>
+<h1>Search Movies: <small class="text-capitalize">{{ searchTerm }}</small></h1>
+<app-movies-grid [movies]="movies"></app-movies-grid>
