--- a/src/app/pages/movie/movie.component.html
+++ b/src/app/pages/movie/movie.component.html
@@ -1,1 +1,42 @@
-<p>movie works!</p>
+<div class="row" *ngIf="movie">
+    <div class="col-md-6 mb-2">
+        <!-- Imagen -->
+        <img [src]="movie.poster_path | movieAsset" 
+             [alt]="movie.title"
+             class="img-thumbnail">
+    </div>
+
+    <div class="col-md-6">
+        <h3>{{ movie.title }}</h3>
+
+        <div class="row ">
+            <div class="col">
+                <star-rating [value]="movie.vote_average" 
+                            [totalstars]="10"
+                            checkedcolor="gold" 
+                            uncheckedcolor="grey" 
+                            size="15px" 
+                            [readonly]="false"></star-rating>
+            </div>
+            <div class="col text-white">
+                {{ movie.vote_average | number:'1.1-2' }}
+            </div>
+        </div>
+
+        <div class="row mt-3">
+            <div class="col text-white">
+                {{ movie.overview }}
+            </div>
+        </div>
+
+        <div class="row mt-5">
+            <div class="col">
+                <button class="btn btn-outline-info"
+                        (click)="onGoBack()">
+                    Back
+                </button>
+            </div>
+        </div>
+
+    </div>
+</div>
