--- a/src/app/components/movies-grid/movies-grid.component.html
+++ b/src/app/components/movies-grid/movies-grid.component.html
@@ -5,7 +5,7 @@
         (click)="onClick(movie)"
     >
         <img 
-            class="img-fluid poster"
+            class="img-fluid poster  animate__animated animate__fadeIn"
             [src]="movie.poster_path | movieAsset"
         >
         <div>
