--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-sm">
     <div class="container-fluid">
-      <a class="navbar-brand" routerLink="/home">Movies</a>
+      <a class="navbar-brand" routerLink="/home">TMDB Movies</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -18,7 +18,7 @@
           >
           <button 
             type="submit"
-            class="btn btn-outline-success" 
+            class="btn btn-outline-info" 
             (click)="movieSearch(search.value)"
           >Search</button>
         </div>
