--- a/src/app/pages/movie/movie.component.html
+++ b/src/app/pages/movie/movie.component.html
@@ -8,7 +8,7 @@
 
     <div class="col-md-6">
         <h3>{{ movie.title }}</h3>
-
+        <h4>{{ movie.tagline }}</h4>
         <div class="row ">
             <div class="col">
                 <star-rating [value]="movie.vote_average" 
@@ -44,5 +44,14 @@
 <div class="row">
     <div class="col">
         <app-cast-slideshow [cast]="cast"></app-cast-slideshow>
+    </div>
+</div>
+
+<div class="row mb-5 mt-2">
+    <div class="col">
+        <h4>Powered By:</h4>
+        <div class="col-sm-12 col-md-2 animate__animated animate__bounceIn">
+            <img src="./assets/images/logo.svg" alt="logo TMDb "  class="img-fluid" />
+        </div>
     </div>
 </div>
